# ai-bot

./: README.md  __main__.py  feature.yaml  pyproject.toml
api/: anthropic_client.py  llama_index_client.py  model_selector.py
books/: book_model.py  book_structure_analyzer.py  chapter_detector.py  file_processor.py  llm_book_processor.py  llm_chapter_detector.py  semantic_chunker.py
bot/: command_handler.py  main.py  message_router.py
database/: database.py  models.py
errors/: error_handler.py  logger.py
tests/: conftest.py  test_book_processing.py  test_book_structure_analyzer.py  test_bot.py  test_database.py  test_error_handling.py  test_llm_book_processor.py  test_llm_chapter_detector.py  test_semantic_chunker.py  test_user_management.py
users/: user_model.py
