[tool.poetry]
name = "book-retention-system"
version = "1.0.0"
description = "Comprehensive Telegram bot for processing, analyzing, and creating spaced repetition learning schedules for books"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.3"
sqlalchemy = "^2.0.15"
anthropic = "^0.5.0"
pytz = "^2023.3"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
apscheduler = "^3.10.1"
pypdf2 = "^3.0.1"
ebooklib = "^0.18.0"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.4.0"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
nltk = "^3.8.1"
networkx = "^3.1"
pytest_asyncio = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "ai_bot.__main__:main"
